--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@
 }
 
 html, body {
+  margin: 0;
   font-size: 14px;
   font-family: var(--font-display);
   line-height: var(--line-height);
@@ -57,6 +58,7 @@ html, body {
 a {
   background-color: transparent;
   color: inherit;
+  text-decoration: none;
 }
 
 h1, h2 {
@@ -212,3 +214,41 @@ h2 {
     transform: rotate(1turn);
   }
 }
+
+.header-container {
+  top: 0px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-color: rgb(91, 90, 90);
+  height: 80px;
+  justify-content: space-between;
+  padding-left: 10px;
+  position: sticky;
+  z-index: 999;
+}
+
+.header-container-logo {
+  color: white;
+  font-size: 25px;
+  font-weight: 900;
+  width: fit-content
+}
+
+.header-container-logo p{
+  margin: 0px;
+}
+
+.header-container-right {
+  display: flex;
+  justify-content: space-around;
+  color: white;
+  padding-right: 20px;
+  font-size: 25px;
+  padding-top: 15px;
+  width: 200px;
+}
+
+
+
+
